<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_key"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        android:labelFor="@+id/etKey"/>

    <EditText
        android:id="@+id/etKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="utm_source"
        android:inputType="textUri"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_label"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/etLabel"/>

    <EditText
        android:id="@+id/etLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rule_label_hint"
        android:inputType="text"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_type"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        
        <RadioButton
            android:id="@+id/rbBlacklist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blacklist"
            android:checked="true" />
        
        <RadioButton
            android:id="@+id/rbWhitelist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/whitelist" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbDanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_danger"
        android:layout_marginTop="8dp" />

</LinearLayout>
